Added colors and fixed margins

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
       <a href="/page2.html">Other page</a>
     </nav> -->
     <main>
-      <h1>Home page</h1>
-      <button id="mood_btn">Switch theme</button>
+      <div class="button-container">
+        <h1>Home page</h1>
+        <button id="mood_btn">Switch theme</button>
+      </div>
       <section class="items">
         <article class="pictures">
           <p>lorem ipsum</p>
@@ -26,31 +28,33 @@
             class="picture-item"
           />
         </article>
-        <article class="pictures>">
+        <article class="pictures">
           <p>lorem ipsum</p>
           <img
               src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
               class="picture-item"
             />
-        </article class="pictures">
-            <p>lorem ipsum</p>
-            <img
-              src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
-              class="picture-item"
+        </article>
+        <article class="pictures">
+          <p>lorem ipsum</p>
+          <img
+            src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
+            class="picture-item"
             />
-          <article class="pictures">
-            <p>lorem ipsum</p>
-            <img
-              src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
-              class="picture-item"
-            />
-          </article>
-          <article class="pictures">
-            <p>lorem ipsum</p>
-            <img
-              src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
-              class="picture-item"
-            />
+        </article>
+        <article class="pictures">
+          <p>lorem ipsum</p>
+          <img
+            src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
+            class="picture-item"
+          />
+        </article>
+        <article class="pictures">
+          <p>lorem ipsum</p>
+          <img
+            src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
+            class="picture-item"
+          />
         </article>
       </section>
     </main>
