--- a/index.html
+++ b/index.html
@@ -15,48 +15,56 @@
       <a href="/" aria-current="page">Home</a>
       <a href="/page2.html">Other page</a>
     </nav> -->
+    <header class="button-container">
+      <h1>Coding assignment 2: CSS Variability</h1>
+      <button id="mood_btn">Switch theme</button>
+    </header>
     <main>
-      <div class="button-container">
-        <h1>Home page</h1>
-        <button id="mood_btn">Switch theme</button>
-      </div>
+      <section class="introduction">
+        <h2 class="intro-header">Welcome to the Universiy of Bergen!</h2>
+        <p>At the University of Bergen you will find a range of different faculties at campus, each of which are dedicated to a specific field of study. This website serves to give you an overview of these various faculties, in which you can see what they look like. If you want more detailed information, <a href="https://www.uib.no/en/about/79596/faculties-departments-and-centres">check out UiB's official website.</a> </p>
+        <p>We wish you a warm welcome to our campus!</p>
+      </section>
       <section class="items">
         <article class="pictures">
-          <p>lorem ipsum</p>
+          <h2>Faculty of Humanities</h2>
           <img
-            src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
+            src="images/hf.jpg"
             class="picture-item"
           />
         </article>
         <article class="pictures">
-          <p>lorem ipsum</p>
+          <h2>Student Center</h2>
           <img
-              src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
+              src="images/ss.jpg"
               class="picture-item"
             />
         </article>
         <article class="pictures">
-          <p>lorem ipsum</p>
+          <h2>Faculty of Social Sciences</h2>
           <img
-            src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
+            src="images/sv.jpg"
             class="picture-item"
             />
         </article>
         <article class="pictures">
-          <p>lorem ipsum</p>
+          <h2>Faculty of Psychology</h2>
           <img
-            src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
+            src="images/pf.jpg"
             class="picture-item"
           />
         </article>
         <article class="pictures">
-          <p>lorem ipsum</p>
+          <h2>University of Bergen Library</h2>
           <img
-            src="https://www.wondercide.com/cdn/shop/articles/Upside_down_gray_cat.png?v=1685551065&width=1100"
+            src="images/ub.jpg"
             class="picture-item"
           />
         </article>
       </section>
     </main>
+    <footer>
+      <p>This is not an official website associated with the University of Bergen. All of the content on this page, including text and images, are produced by the author Bjørn André Svellingen Lavik.</p>
+    </footer>
   </body>
 </html>
